# computer-graphics-project

./: .gitignore  CMakeLists.mac.txt  CMakeLists.txt  CMakeLists.win.txt  build-shaders.bat
assets/: city_scene.json  pepsiman-alone.json  road_scene.json  test_scene.json  world.json
assets/models/: SPW_Medieval_Road_01.mgcg  SPW_Terrain_Grass_Flat.mgcg
assets/models/big_city/: license.txt  scene.gltf
assets/models/cola-can/: cola.gltf
assets/models/low_road/: license.txt  long road.gltf
assets/models/lynx_-_stars_-_animated/: license.txt  scene.gltf
assets/models/pepsi-can/: license.txt  scene.gltf
assets/models/pepsiman/: license.txt  scene.gltf
assets/models/terrian/: scene.gltf
assets/models/tunnel_new/: untitled.gltf
assets/shaders/src/: BlinnShader.vert  animated-skin.frag  animated-skin.vert  game-object.frag  game-object.vert  metallic.frag  metallic.vert  pepsiman.frag  pepsiman.vert  skinning.frag  skinning.vert  skybox-cubemap.frag  skybox.frag  skybox.vert  stationary.frag  stationary.vert
src/: A10.hpp  App.hpp  SkyBox.hpp  SkyBoxApp.hpp  app.hpp  camera.hpp  common.hpp  enums.hpp  game-object-loader.hpp  game-object.hpp  helper-structs.hpp  landscape.hpp  light-object.hpp  main.cpp  printer.hpp  render-systems-app.hpp  scene-test-app.hpp  scene.hpp  test-loader.hpp  world-loader.hpp
src/animated-model/: animated-model.hpp  animation.hpp  gltf-loader.hpp  joint.hpp  node.hpp  scene.hpp  skin-data.hpp  skin.hpp
src/game-objects/: game-object-base.hpp  game-object-loader.hpp  gltf-skin-base.hpp  moving-object.hpp  multi-mesh-game-object.hpp
src/modules/: Scene.hpp  Starter.hpp  TextMaker.hpp
src/render-system/: animated-skin-render-system.hpp  metallic-render-system.hpp  pepsiman-render-system.hpp  render-system.hpp  stationary-render-system.hpp
src/scene/: city-scene.hpp  only-pepsiman-scene.hpp  road-scene.hpp  scene-base.hpp  scene-loader.hpp  test-scene.hpp
